fix spacing and heading in media pages

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -3628,7 +3628,7 @@ img {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-  margin-top: 32px;
+  margin-top: 32px !important;
 }
 
 @media (max-width: 743.98px) {
